fixed notepad clipping issue
Fixed notepad clipping issue where notepad was clipped at the bottom of the screen

--- a/src/styles/notepad.module.css
+++ b/src/styles/notepad.module.css
@@ -1,7 +1,7 @@
 .notepadContainer {
   display: flex;
   position: relative;
-  bottom: 100px;
+  bottom: 200px;
   height: 100%;
   width: 100%;
   justify-content: center;
